--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  json_annotation: ^4.0.1
+  http: ^0.13.4
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +41,8 @@ dev_dependencies:
   pedantic: ^1.10.0
   flutter_test:
     sdk: flutter
+  build_runner:
+  json_serializable: ^4.1.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
